Added standard wrapper-based implementation for OC stuff, but for some reason it won't show up in-game.  Splitting to its own branch for now.  Will either merge via PR, or cut entirely.  Not sure.

--- a/build.gradle
+++ b/build.gradle
@@ -38,10 +38,19 @@ shadowJar {
 	//Need to shadow javazoom (jlayer) for MP3 support.
     relocate 'javazoom', 'minecrafttransportsimulator.shadowed.javazoom'
     exclude 'dummyThing'
+	exclude 'OpenComputers'
+}
+
+repositories {
+    maven {
+        name = "OpenComputers"
+        url = "http://maven.cil.li/"
+    }
 }
 
 dependencies {
     compile group: 'com.googlecode.soundlibs', name: 'jlayer', version: '1.0.1.4'
+	deobfProvided group: 'li.cil.oc', name: 'OpenComputers', version: 'MC1.12.2-1.7.+'
 }
 
 
