--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -31,6 +31,6 @@ jobs:
         with:
           path: build/libs/*.jar
           name: Build_Result
-###################### Read pipeline END ######################
+###################### Real pipeline END ######################
 
 
