mixin for splash progress that partially works (I think)

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
-# common
-run
-build
-.gradle
-
 # eclipse
-eclipse
 bin
 *.launch
 .metadata
 .classpath
 .project
-.settings
 
 # idea
 out
@@ -18,3 +11,12 @@ out
 *.iws
 *.iml
 .idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
+libs
