--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: "net.minecraftforge.gradle"
 apply plugin: "eclipse"
 
 //Set file name.
-version = "1.12.2-22.0.0"
+version = "1.12.2-22.1.0-BETA3"
 group = "minecrafttransportsimulator"
 archivesBaseName = "Immersive Vehicles"
 
